--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -22,9 +22,12 @@
     }
 
     &__social-img {
+        width: 31px;
+        height: 31px;
     }
 
     &__about {
+        width: 50px;
         margin-top: 11px;
         margin-left: 156px;
     }
