--- a/app/scss/_portfolio-photo.scss
+++ b/app/scss/_portfolio-photo.scss
@@ -3,6 +3,8 @@
     position: relative;
 
     &__title {
+        width: 840px;
+        margin: 0 auto;
         margin-bottom: 80px;
         display: block;
         position: relative;
