--- a/app/scss/_curriculum.scss
+++ b/app/scss/_curriculum.scss
@@ -46,7 +46,7 @@
     &__title:before {
         content: "";
         position: absolute;
-        background: url(../images/cross.svg);
+        background: url(../images/cross.svg) 0 0/100% 100% no-repeat;
         width: 45px;
         height: 45px;
         top: -5px;
@@ -99,7 +99,7 @@
 
     &__list {
         display: flex;
-        margin-left: 20px;
+
         flex-wrap: wrap;
         column-gap: 70px;
 
@@ -107,9 +107,9 @@
 
     &__list-item {
         position: relative;
-        list-style: square url(../images/star.png) outside;
+        background: url(../images/star.png) 0 25px/14px 14px no-repeat;
         width: 500px;
-        padding-left: 20px;
+        padding-left: 35px;
         padding-top: 25px;
     }
 }
