--- a/app/scss/_experience.scss
+++ b/app/scss/_experience.scss
@@ -25,15 +25,14 @@
     }
 
     &__list {
-        margin-left: 20px;
         margin-top: 15px;
     }
 
     &__list li{
         position: relative;
-        list-style: square url(../images/star.png) outside;
+        background: url(../images/star.png) 0 25px/14px 14px no-repeat;
         width: 470px;
-        padding-left: 20px;
+        padding-left: 35px;
         padding-top: 25px;
     }
 
