--- a/app/scss/_photo-offer.scss
+++ b/app/scss/_photo-offer.scss
@@ -42,6 +42,8 @@
 
 	&__pattern {
         position: absolute;
+		width: 254px;
+        height: 173px;
         top: 500px;
         left: 0;
     }
