--- a/app/scss/_video.scss
+++ b/app/scss/_video.scss
@@ -5,6 +5,8 @@
     justify-content: center;
 
     &__play {
+        width: 90px;
+        height: 68px;
         position: absolute;
         top:50%;
         left:50%;
