--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -27,7 +27,7 @@
     }
 
     &__about {
-        width: 50px;
+        width: auto;
         margin-top: 11px;
         margin-left: 156px;
     }
