--- a/app/scss/_conditions.scss
+++ b/app/scss/_conditions.scss
@@ -1,4 +1,5 @@
 .conditions {
+    position: relative;
 
     &__title {
         margin-bottom: 100px;
@@ -25,6 +26,12 @@
     &__btn {
         margin-bottom: 195px;
     }
+
+    &__shadow {
+		right: -400px;
+		top: 300px;
+        z-index: -1;
+	}
 }
 
 .condition {
