--- a/app/scss/_faq.scss
+++ b/app/scss/_faq.scss
@@ -19,6 +19,11 @@
         top: -300px;
         right: -900px;
     }
+
+    &__shadow {
+        top: -300px;
+        right: -1000px;
+    }
 }
 
 .question {
