--- a/app/scss/_path.scss
+++ b/app/scss/_path.scss
@@ -2,7 +2,7 @@
     margin-bottom: 220px;
 
     &__title {
-        margin-bottom: 110px;
+        margin-bottom: 130px;
     }
 
     &__title:after {
@@ -52,11 +52,11 @@
     &__number:nth-of-type(odd):after {
         content: '';
         position: absolute;
-        background: #F7A636; //dots
+        background: #F7A636;
         width: 13px;
         height: 13px;
         top: -2px;
-        right: -9px;
+        right: -8px;
         border-radius: 10px;
     }
 
