--- a/app/scss/_rate.scss
+++ b/app/scss/_rate.scss
@@ -65,6 +65,9 @@
         margin-left: 150px;
         text-align: left;
     }
+    &__description-title {
+        display: none;
+    }
 
     &__components {
         margin-bottom: 20px;
