--- a/app/scss/_video.scss
+++ b/app/scss/_video.scss
@@ -1,8 +1,8 @@
 .video {
     margin-bottom: 220px;
     position: relative;
-    display: flex;
-    justify-content: center;
+    background: url(../images/video.jpg) center center/cover no-repeat;
+    height: 667px;
 
     &__play {
         width: 90px;
@@ -12,9 +12,5 @@
         left:50%;
         transform:translate(-50%, -50%);
         cursor: pointer;
-    }
-
-    &__img {
-        position: relative;
     }
 }
