--- a/app/scss/libs/_slick.scss
+++ b/app/scss/libs/_slick.scss
@@ -54,6 +54,8 @@
     bottom: -45px;
     left: 50%;
     transform: translateX(-50%);
+    width: 100%;
+    text-align: center;
 
     li {
         display: inline-block;
